<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/gradiant_bg"
    android:gravity="center"
    android:padding="18dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/roboto_bold_italic"
        android:text="@string/titleText"
        android:textColor="@color/buttonColor"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:outlineAmbientShadowColor="@color/buttonColor"
        android:background="@drawable/dss_removebg_preview"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">



            <TextView
                android:id="@+id/grateful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="1sp"
                android:text="@string/app_name" />




    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:text="@string/getStartedText"
        android:fontFamily="@font/roboto_bold_italic"
        android:textColor="@color/buttonColor" />



</androidx.appcompat.widget.LinearLayoutCompat>