<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/gradiant_bg"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-35dp">


    <Button
        android:id="@+id/loginButtonLg"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/endGColor"
        android:fontFamily="@font/roboto_bold_italic"
        android:text="@string/signinButton"
        android:textColor="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordEt"
        app:layout_constraintVertical_bias="0.726" />

    <EditText
        android:id="@+id/loginEmailEt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/emailLoginEt"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/loginPasswordEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planeImageViewLg"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/loginPasswordEt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/passwordLoginEt"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planeImageViewLg"
        app:layout_constraintVertical_bias="0.179" />

    <ImageView
        android:id="@+id/planeImageViewLg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/plane" />

</androidx.constraintlayout.widget.ConstraintLayout>